<resources>
    <string name="app_name">GDSC</string>

    <string name="bottomNavHome">Home</string>
    <string name="bottomNavSession">Sessions</string>
    <string name="bottomNavEvents">Events</string>
    <string name="bottomNavMembers">Members</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="profile_greeting">Tell us About Yourself</string>
    <string name="optional_text">Optional Fields</string>
    <string name="proceed">Proceed</string>

    <string name="home_title">Google Developer Student Club MMUST.</string>
    <string name="home_sub_title">Google Developer Student Club (GDSC) is a community group for university students that help  bridge the gap between theory and practice.</string>
    <string name="title_activity_management">ManagementActivity</string>

    <!-- Preference Titles -->
    <string name="add_header">Add</string>
    <string name="edit_header">Edit</string>
    <string name="delete_header">Delete</string>

    <!-- Track Preferences -->
    <string name="track_title">Track</string>
    <string name="track_description">A single tech path that is taught e.g. Android, Web</string>

    <!-- Event Preferences -->
    <string name="event_title">Event</string>
    <string name="event_description">Events that happen within the region</string>

    <!-- Resource Preferences -->
    <string name="resource_title">Resource</string>
    <string name="resource_description">Files, Videos, Articles or Websites useful for studying</string>



    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>