<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:allowDividerBelow="false"
        app:icon="@drawable/ic_baseline_add_24"
        app:singleLineTitle="true"
        app:title="@string/add_header">

        <Preference
            app:key="add_track"
            app:title="@string/track_title"
            app:summary="@string/track_description"/>

        <Preference
            app:key="add_resource"
            app:title="@string/resource_title"
            app:summary="@string/resource_description"/>

        <Preference
            app:key="add_event"
            app:title="@string/event_title"
            app:summary="@string/event_description"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="true"
        app:icon="@drawable/ic_baseline_edit_24"
        app:title="@string/edit_header">

        <Preference
            app:key="edit_track"
            app:title="@string/track_title"
            app:summary="@string/track_description"/>

        <Preference
            app:key="edit_resource"
            app:title="@string/resource_title"
            app:summary="@string/resource_description"/>

        <Preference
            app:key="edit_event"
            app:title="@string/event_title"
            app:summary="@string/event_description"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="true"
        app:icon="@drawable/ic_baseline_delete_24"
        app:title="@string/delete_header">

        <Preference
            app:key="delete_track"
            app:summary="@string/track_description"
            app:title="@string/track_title" />

        <Preference
            app:key="delete_resource"
            app:summary="@string/resource_description"
            app:title="@string/resource_title" />

        <Preference
            app:key="delete_event"
            app:summary="@string/event_description"
            app:title="@string/event_title" />

    </PreferenceCategory>

</PreferenceScreen>