<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/dashboard"
        android:title="@string/bottomNavHome"
        android:visible="true" />

    <item
        android:id="@+id/sessions"
        android:icon="@drawable/sessions"
        android:title="@string/bottomNavSession"
        android:visible="true" />

    <item
        android:id="@+id/events"
        android:icon="@drawable/events"
        android:title="@string/bottomNavEvents" />

    <item
        android:id="@+id/members"
        android:icon="@drawable/members"
        android:title="@string/bottomNavMembers"
        app:showAsAction="withText" />
</menu>