<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.presentation.ui.auth.ProfileSetupFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/profile_greeting"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Full Name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Profession" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="About Me"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/optional_text"
            android:textColor="#79747E"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Github URL"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_linkedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="LinkedIn URL "
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Twitter URL"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Instagram URL"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Dribble URL"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#4285F4"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/proceed"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="4dp"/>

    </LinearLayout>
</ScrollView>